<resources>
    <string name="app_name">Calculadora</string>
    <string name="title">CALCULADORA ADQUIRIENCIA</string>
    <string name="txtVenta">VENTA</string>
    <string name="txtSubTotal">SubTotal</string>
    <string name="inpSubTotal"></string>
    <string name="txtGraIva">¿graba iva?</string>
    <string name="No">No</string>
    <string name="Si">Si</string>
    <string name="txtTotal">Total</string>
    <string name="empty"></string>
    <string name="txtComi">COMISIÓN</string>
    <string name="txtCard">Tarjeta</string>
    <string name="cred">Credito(4.5%)</string>
    <string name="deb">Debito(2.24%)</string>
    <string name="txtIva">IVA</string>
    <string name="txtRetenc">RETENCIONES</string>
    <string name="txtContr">Contribuyente</string>
    <string name="itemOne">Contribuyentes Rise</string>
    <string name="itemTwo">Arte calificado por la Junta</string>
    <string name="itemThree">Especial Bienes</string>
    <string name="itemFour">Especial Servicios</string>
    <string name="itemFive">No especial Bienes</string>
    <string name="itemSix">No especial Servicios</string>
    <string name="txtImpRent">Impuesto a la renta</string>
    <string name="IVA">IVA</string>
    <string name="Message">Recibira en tu cuenta:</string>
    <string name="title_activity_main3">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>